# garage

./: .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  alembic.ini  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
Agents/: architecture-design.md  backend-testing.md  coding.md  communication-marketing.md  deploying.md  frontend-testing.md  project-manager.md  project-orchestrator.md  security-audit.md  ui-ux-design.md
backend/: __init__.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 20260525_0001_initial_schema.py  20260526_0002_google_auth.py  20260526_0003_user_preferences.py
backend/tests/: test_api.py
src/: api.test.ts  copy.test.ts  garage.ts  main.tsx  preferences.test.ts  preferences.ts  styles.css  theme.test.ts  theme.ts  uiCopy.ts
